// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EducationField /> matches snapshot 1`] = `
<select
  class="sc-dIUggk hhFmtN"
  id="educationField"
  name="name"
  type="text"
>
  <option
    class="sc-dmlrTW hequYp"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="none"
  >
    brak
  </option>
  <option
    value="primary"
  >
    podstawowe
  </option>
  <option
    value="vocational"
  >
    zawodowe
  </option>
  <option
    value="secondary"
  >
    średnie
  </option>
  <option
    value="higher"
  >
    wyższe licencjackie
  </option>
  <option
    value="masters"
  >
    wyższe magisterskie
  </option>
  <option
    value="phd"
  >
    wyższe doktorskie
  </option>
</select>
`;

exports[`<EducationField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk jigzeI"
          id="educationField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="none"
          >
            brak
          </option>
          <option
            value="primary"
          >
            podstawowe
          </option>
          <option
            value="vocational"
          >
            zawodowe
          </option>
          <option
            value="secondary"
          >
            średnie
          </option>
          <option
            value="higher"
          >
            wyższe licencjackie
          </option>
          <option
            value="masters"
          >
            wyższe magisterskie
          </option>
          <option
            value="phd"
          >
            wyższe doktorskie
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<EducationField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk hhFmtN"
          id="educationField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="none"
          >
            brak
          </option>
          <option
            value="primary"
          >
            podstawowe
          </option>
          <option
            value="vocational"
          >
            zawodowe
          </option>
          <option
            value="secondary"
          >
            średnie
          </option>
          <option
            value="higher"
          >
            wyższe licencjackie
          </option>
          <option
            value="masters"
          >
            wyższe magisterskie
          </option>
          <option
            value="phd"
          >
            wyższe doktorskie
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<EducationField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk jigzeI"
          id="educationField"
          name="name"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="none"
          >
            brak
          </option>
          <option
            value="primary"
          >
            podstawowe
          </option>
          <option
            value="vocational"
          >
            zawodowe
          </option>
          <option
            value="secondary"
          >
            średnie
          </option>
          <option
            value="higher"
          >
            wyższe licencjackie
          </option>
          <option
            value="masters"
          >
            wyższe magisterskie
          </option>
          <option
            value="phd"
          >
            wyższe doktorskie
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
